--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ source:
   patches:
     - m_pi.patch
     - no-module-warning.patch
+    - 0001-Make-g-ir-scanner-verbose-for-debugging.patch
 
 build:
   number: 1
