--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -11,14 +11,17 @@ jobs:
       linux_64_:
         CONFIG: linux_64_
         UPLOAD_PACKAGES: 'True'
+        SHORT_CONFIG: linux_64_
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-comp7
       linux_aarch64_:
         CONFIG: linux_aarch64_
         UPLOAD_PACKAGES: 'True'
+        SHORT_CONFIG: linux_aarch64_
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-aarch64
       linux_ppc64le_:
         CONFIG: linux_ppc64le_
         UPLOAD_PACKAGES: 'True'
+        SHORT_CONFIG: linux_ppc64le_
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-ppc64le
   timeoutInMinutes: 360
 
@@ -47,15 +50,31 @@ jobs:
       FEEDSTOCK_TOKEN: $(FEEDSTOCK_TOKEN)
       STAGING_BINSTAR_TOKEN: $(STAGING_BINSTAR_TOKEN)
   - script: |
-        full_artifact_name="conda_artifacts_$(build.BuildId)_$(CONFIG)"
-        artifact_name=`echo "$full_artifact_name" | head -c 80`
+        artifact_name="conda_artifacts_$(build.BuildId)_$(CONFIG)"
+        if [[ ${#artifact_name} -gt 80 ]]; then
+          artifact_name="conda_artifacts_$(build.BuildId)_$(SHORT_CONFIG)"
+        fi
         echo "##vso[task.setVariable variable=ARTIFACT_NAME]$artifact_name"
         if [ -d build_artifacts ]; then
           echo "##vso[task.setVariable variable=CONDA_BLD_DIR_EXISTS]true"
+          rm -rf build_artifacts/src_cache
         fi
     displayName: Check for conda build artifacts
     condition: succeededOrFailed()
 
-  - publish: build_artifacts/
-    artifact: $(ARTIFACT_NAME)
+  - task: ArchiveFiles@2
+    displayName: Make archive of conda build artifacts
     condition: eq(variables.CONDA_BLD_DIR_EXISTS, 'true')
+    inputs:
+      rootFolderorFile: build_artifacts/
+      includeRootFolder: false
+      archiveType: zip
+      archiveFile: $(Build.ArtifactStagingDirectory)/$(ARTIFACT_NAME).zip
+      replaceExistingArchive: true
+
+  - task: PublishPipelineArtifact@1
+    displayName: Store conda build artifacts
+    condition: eq(variables.CONDA_BLD_DIR_EXISTS, 'true')
+    inputs:
+      targetPath: $(Build.ArtifactStagingDirectory)/$(ARTIFACT_NAME).zip
+      artifactName: $(ARTIFACT_NAME)
