--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -11,6 +11,7 @@ jobs:
       win_64_:
         CONFIG: win_64_
         UPLOAD_PACKAGES: 'True'
+        SHORT_CONFIG: win_64_
   timeoutInMinutes: 360
   variables:
     CONDA_BLD_PATH: D:\\bld\\
@@ -92,18 +93,34 @@ jobs:
         PYTHONUNBUFFERED: 1
       condition: not(contains(variables['CONFIG'], 'vs2008'))
     - script: |
-        set full_artifact_name=conda_artifacts_$(build.BuildID)_$(CONFIG)
-        set artifact_name=%full_artifact_name:~0,80%
+        set artifact_name=conda_artifacts_$(build.BuildID)_$(CONFIG)
+        if not "%artifact_name%" == "%artifact_name:~0,80%" (
+          set artifact_name=conda_artifacts_$(build.BuildID)_$(SHORT_CONFIG)
+        )
         echo ##vso[task.setVariable variable=ARTIFACT_NAME]%artifact_name%
         if exist $(CONDA_BLD_PATH)\\ (
           echo ##vso[task.setVariable variable=CONDA_BLD_DIR_EXISTS]true
+          if exist $(CONDA_BLD_PATH)\\src_cache ( rmdir /s /q $(CONDA_BLD_PATH)\\src_cache )
         )
       displayName: Check for conda build artifacts
       condition: succeededOrFailed()
 
-    - publish: $(CONDA_BLD_PATH)\\
-      artifact: $(ARTIFACT_NAME)
+    - task: ArchiveFiles@2
+      displayName: Make archive of conda build artifacts
       condition: eq(variables.CONDA_BLD_DIR_EXISTS, 'true')
+      inputs:
+        rootFolderorFile: $(CONDA_BLD_PATH)/
+        includeRootFolder: false
+        archiveType: zip
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(ARTIFACT_NAME).zip
+        replaceExistingArchive: true
+
+    - task: PublishPipelineArtifact@1
+      displayName: Store conda build artifacts
+      condition: eq(variables.CONDA_BLD_DIR_EXISTS, 'true')
+      inputs:
+        targetPath: $(Build.ArtifactStagingDirectory)/$(ARTIFACT_NAME).zip
+        artifactName: $(ARTIFACT_NAME)
     - script: |
         set "FEEDSTOCK_NAME=%BUILD_REPOSITORY_NAME:*/=%"
         call activate base
